popupJS file formatting arrange

--- a/popup.html
+++ b/popup.html
@@ -192,7 +192,9 @@
     <br />
     <lbl id="lblSelections">- Selections -</lbl>
     <lbl id="lblSelectionsNone">No selections added yet</lbl>
-    <ul id="selections"></ul>
+    <div style="overflow-y: scroll; height: 200px;">
+      <ul id="selections"></ul>
+    </div>
     <!-- <button id="btnConnect" class="button disabled">Connect</button>
 		<button id="btnConnections" class="button">See connections</button> -->
     <!-- footer -->
