--- a/popup.html
+++ b/popup.html
@@ -192,7 +192,7 @@
     <br />
     <lbl id="lblSelections">- Selections -</lbl>
     <lbl id="lblSelectionsNone">No selections added yet</lbl>
-    <div style="overflow-y: scroll; height: 180px;">
+    <div style="overflow-y: scroll; height: 180px; border: 0.5px solid white;">
       <ul id="selections"></ul>
     </div>
     <!-- <button id="btnConnect" class="button disabled">Connect</button>
