--- a/popup.html
+++ b/popup.html
@@ -188,13 +188,10 @@
       <button id="btnHomepage" class="button">Homepage</button>
       <button id="btnSaveArticle" class="button">Check Article Later</button>
     </div>
-
-    <br />
     <lbl id="lblSelections">- Selections -</lbl>
     <lbl id="lblSelectionsNone">No selections added yet</lbl>
-    <div style="overflow-y: scroll; height: 180px; border: 0.5px solid white;">
-      <ul id="selections"></ul>
-    </div>
+    <ul id="selections">
+    </ul>
     <!-- <button id="btnConnect" class="button disabled">Connect</button>
 		<button id="btnConnections" class="button">See connections</button> -->
     <!-- footer -->
